rust_writer_procedural/tests/ui/finder_fails_if_visit_not_in_scope.stderr
error[E0599]: no method named `visit_file` found for mutable reference `&mut SomeStructFinderWrapper<'finder, 'a>` in the current scope
 --> tests/ui/finder_fails_if_visit_not_in_scope.rs:6:1
  |
6 | #[finder(rust_writer::ast::implementors::ItemToTrait<'a>, rust_writer::ast::implementors::ItemToImpl<'a>)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: items from traits can only be used if the trait is in scope
  = note: this error originates in the attribute macro `finder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: trait `Visit` which provides `visit_file` is implemented but not in scope; perhaps you want to import it
  |
3 + use syn::visit::Visit;
  |
help: there is a method `visit_field_value` with a similar name
  |
6 | visit_field_value
  |
